# PastePull

./: .gitignore  Guia.md  README.md  comandos.md  index.html  package-lock.json  package.json
scripts/: clean.ts
src/: App.tsx  DownloadManager.ts  SettingsScreen.tsx  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloader.rs  file_ops.rs  history_ops.rs  main.rs  process.rs  thumbnail_ops.rs  types.rs  utils.rs  watcher.rs
src/components/: ActiveDownloads.tsx  HistoryList.tsx  MediaInput.tsx  Modals.tsx  RecentActivity.tsx
src/hooks/: useDownloadCalculations.ts  useDownloadHistory.ts  useDownloadProgress.ts  useMediaAnalyzer.ts  useNotifications.ts
src/state/: appState.ts
src/utils/: downloadHandler.ts  formatters.ts  helpers.ts  i18n.ts
